update cv and homepage

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="row">
           <h1>About</h1>
           <div class="vspace">
-            Hi, I am Tong Wang, currently Applied Scientist in Amazon Alexa AI. I obtained my PhD degree in Computer Science from University of Massachusetts Boston,
+            Hi, I am Tong Wang, currently a Senior Applied Scientist in AWS Machine Learning Solutions Lab. I obtained my PhD degree in Computer Science from University of Massachusetts Boston,
             advised by
             <a href="https://www.cs.umb.edu/~pchen/" target="_blank">
               Prof. Ping Chen
